--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <htlm>
   <head>
     <link rel="stylesheet" href="/static/style.css">
+    <script src="/static/api.js"></script>
     <title>
     </title>
   <head>
